// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recordToDom should create a value with formatting 1`] = `
<React.Fragment>
  <em
    data-rich-text-format-boundary="true"
  >
    test
    <br
      data-rich-text-padding="true"
    />
  </em>
  
</React.Fragment>
`;

exports[`recordToDom should create a value with formatting for split tags 1`] = `
<React.Fragment>
  <em
    data-rich-text-format-boundary="true"
  >
    test
    <br
      data-rich-text-padding="true"
    />
  </em>
  
</React.Fragment>
`;

exports[`recordToDom should create a value with formatting with attributes 1`] = `
<React.Fragment>
  <a
    data-rich-text-format-boundary="true"
    href="#"
  >
    test
    <br
      data-rich-text-padding="true"
    />
  </a>
  
</React.Fragment>
`;

exports[`recordToDom should create a value with image object 1`] = `
<React.Fragment>
  <img
    src=""
  />
  
  <br
    data-rich-text-padding="true"
  />
  
</React.Fragment>
`;

exports[`recordToDom should create a value with image object and formatting 1`] = `
<React.Fragment>
  <em>
    <img
      src=""
    />
    
    <br
      data-rich-text-padding="true"
    />
  </em>
  
</React.Fragment>
`;

exports[`recordToDom should create a value with image object and text after 1`] = `
<React.Fragment>
  <em>
    <img
      src=""
    />
    te
  </em>
  st
  <br
    data-rich-text-padding="true"
  />
  
</React.Fragment>
`;

exports[`recordToDom should create a value with image object and text before 1`] = `
<React.Fragment>
  te
  <em>
    st
    <img
      src=""
    />
    
    <br
      data-rich-text-padding="true"
    />
  </em>
  
</React.Fragment>
`;

exports[`recordToDom should create a value with nested formatting 1`] = `
<React.Fragment>
  <em>
    <strong
      data-rich-text-format-boundary="true"
    >
      test
      <br
        data-rich-text-padding="true"
      />
    </strong>
  </em>
  
</React.Fragment>
`;

exports[`recordToDom should create a value without formatting 1`] = `
<React.Fragment>
  test
  <br
    data-rich-text-padding="true"
  />
  
</React.Fragment>
`;

exports[`recordToDom should create an empty value 1`] = `
<React.Fragment>
  
  <br
    data-rich-text-padding="true"
  />
</React.Fragment>
`;

exports[`recordToDom should create an empty value from empty tags 1`] = `
<React.Fragment>
  
  <br
    data-rich-text-padding="true"
  />
</React.Fragment>
`;

exports[`recordToDom should filter format boundary attributes 1`] = `
<React.Fragment>
  <strong
    data-rich-text-format-boundary="true"
  >
    test
    <br
      data-rich-text-padding="true"
    />
  </strong>
  
</React.Fragment>
`;

exports[`recordToDom should handle br 1`] = `
<React.Fragment>
  
  <br />
  
  <br
    data-rich-text-padding="true"
  />
  
</React.Fragment>
`;

exports[`recordToDom should handle br with formatting 1`] = `
<React.Fragment>
  <em
    data-rich-text-format-boundary="true"
  >
    
    <br />
    
    <br
      data-rich-text-padding="true"
    />
  </em>
  
</React.Fragment>
`;

exports[`recordToDom should handle br with text 1`] = `
<React.Fragment>
  te
  <br />
  st
  <br
    data-rich-text-padding="true"
  />
  
</React.Fragment>
`;

exports[`recordToDom should handle double br 1`] = `
<React.Fragment>
  a
  <br />
  
  <br />
  b
  <br
    data-rich-text-padding="true"
  />
  
</React.Fragment>
`;

exports[`recordToDom should handle empty list value 1`] = `
<React.Fragment>
  <li>
    
    <br
      data-rich-text-padding="true"
    />
  </li>
</React.Fragment>
`;

exports[`recordToDom should handle empty multiline value 1`] = `
<React.Fragment>
  <p>
    
    <br
      data-rich-text-padding="true"
    />
  </p>
</React.Fragment>
`;

exports[`recordToDom should handle middle empty list value 1`] = `
<React.Fragment>
  <li>
    
  </li>
  <li>
    
    <br
      data-rich-text-padding="true"
    />
    
  </li>
  <li>
    
    <br
      data-rich-text-padding="true"
    />
    
  </li>
</React.Fragment>
`;

exports[`recordToDom should handle multiline list value 1`] = `
<React.Fragment>
  <li>
    one
    <br
      data-rich-text-padding="true"
    />
    <ul>
      <li>
        a
        <br
          data-rich-text-padding="true"
        />
      </li>
      <li>
        b
        <br
          data-rich-text-padding="true"
        />
        <ol>
          <li>
            1
            <br
              data-rich-text-padding="true"
            />
          </li>
          <li>
            2
            <br
              data-rich-text-padding="true"
            />
          </li>
        </ol>
      </li>
    </ul>
  </li>
  <li>
    three
    <br
      data-rich-text-padding="true"
    />
    
  </li>
</React.Fragment>
`;

exports[`recordToDom should handle multiline value 1`] = `
<React.Fragment>
  <p>
    one
    <br
      data-rich-text-padding="true"
    />
  </p>
  <p>
    two
    <br
      data-rich-text-padding="true"
    />
    
  </p>
</React.Fragment>
`;

exports[`recordToDom should handle multiline value with element selection 1`] = `
<React.Fragment>
  <li>
    one
    <br
      data-rich-text-padding="true"
    />
    
  </li>
</React.Fragment>
`;

exports[`recordToDom should handle multiline value with empty 1`] = `
<React.Fragment>
  <p>
    one
    <br
      data-rich-text-padding="true"
    />
  </p>
  <p>
    
    <br
      data-rich-text-padding="true"
    />
    
  </p>
</React.Fragment>
`;

exports[`recordToDom should handle nested empty list value 1`] = `
<React.Fragment>
  <li>
    <ul>
      <li>
        
        <br
          data-rich-text-padding="true"
        />
        
      </li>
    </ul>
  </li>
</React.Fragment>
`;

exports[`recordToDom should handle selection before br 1`] = `
<React.Fragment>
  a
  <br />
  
  <br />
  b
  <br
    data-rich-text-padding="true"
  />
  
</React.Fragment>
`;

exports[`recordToDom should ignore formats at line separator 1`] = `
<React.Fragment>
  <p>
    <em>
      one
      <br
        data-rich-text-padding="true"
      />
    </em>
  </p>
  <p>
    <em>
      two
      <br
        data-rich-text-padding="true"
      />
    </em>
    
  </p>
</React.Fragment>
`;

exports[`recordToDom should preserve emoji 1`] = `
<React.Fragment>
  🍒
  <br
    data-rich-text-padding="true"
  />
  
</React.Fragment>
`;

exports[`recordToDom should preserve emoji in formatting 1`] = `
<React.Fragment>
  <em
    data-rich-text-format-boundary="true"
  >
    🍒
    <br
      data-rich-text-padding="true"
    />
  </em>
  
</React.Fragment>
`;

exports[`recordToDom should preserve non breaking space 1`] = `
<React.Fragment>
  test  test
  <br
    data-rich-text-padding="true"
  />
  
</React.Fragment>
`;

exports[`recordToDom should remove padding 1`] = `
<React.Fragment>
  
  <br
    data-rich-text-padding="true"
  />
</React.Fragment>
`;

exports[`recordToDom should replace characters to format HTML with space 1`] = `
<React.Fragment>
   
  <br
    data-rich-text-padding="true"
  />
  
</React.Fragment>
`;
